<resources>
    <string name="app_name">Card Balance Viewer</string>

    <string name="PrivateList">Your Cards:</string>
    <string name="PublicList">Shared Cards:</string>

    <string name="EditName_label">Card Name:</string>
    <string name="EditName">Card</string>
    <string name="EditName_hint">Card Name</string>

    <string name="EditValue_label">Current Balance:</string>
    <string name="EditValue">0.00</string>
    <string name="EditValue_hint">$0.00</string>

    <string name="DateEdited">Date Last Saved:</string>
    <string name="UnsavedChanges"></string>

    <string name="ChangeValue_label">Update Balance by Adding or Subtracting:</string>
    <string name="AddButton">Add</string>
    <string name="SubButton">Sub</string>
    <string name="SaveButton">Save Card</string>
</resources>